Attempted solution to base.css to fix background image on mobile devices.

--- a/styles/base.css
+++ b/styles/base.css
@@ -164,6 +164,12 @@ footer {
   transition: 300ms ease-in-out;
 }
 
+@media (hover: none) {
+  body {
+    background-attachment: initial;
+  }
+}
+
 @media (max-width: 480px) {
   #container {
     width: auto;
